--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>test</h1>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
