--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.f7626f62.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>HWLLO WORLD</h1>
-    <script src="/index.975ef6c8.js" defer=""></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/index.da159af7.css"><title>Document</title></head><body> <h1>COMING SOON</h1> <script src="/index.1fc92b19.js" type="module"></script> </body></html>
