--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HWLLO WORLD</h1>
+    <h1>COMING SOON</h1>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
