--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>COMING SOON</h1>
+    <a href="./pages/sponsors.html">tp</a>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
