--- a/pages/register/register2.html
+++ b/pages/register/register2.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        <h1 class="register__title">Реєстрація</h1>
-        <input class="register__input" placeholder="Ім’я" type="text">
-        <input class="register__input" placeholder="Прізвище" type="text">
-        <input class="register__input" placeholder="Логін" type="text">
-        <input class="register__input" placeholder="Пароль" type="text">
-        <input class="register__input" placeholder="Повторіть пароль" type="text">
-        <button class="register__button">Зареєструватися</button>
-    </div>
-<script src="/register2.f9b5fb5a.js"></script></body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Document</title></head><body> <div class="container"> <h1 class="register__title">Реєстрація</h1> <input class="register__input" placeholder="Ім’я" type="text"> <input class="register__input" placeholder="Прізвище" type="text"> <input class="register__input" placeholder="Логін" type="text"> <input class="register__input" placeholder="Пароль" type="text"> <input class="register__input" placeholder="Повторіть пароль" type="text"> <button class="register__button">Зареєструватися</button> </div> </body></html>
