--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 
 <body>
+    <div class="pages">
+        <include src="./pages/sponsors.html"></include>
+    </div>
     <header>
         <div class="container">
             <span class="header__logo">ED</span>
             <nav class="nav">
-                <a href="/pages/register/register2.html" class="nav__item">Головна</a>
+                <a href="/index.html" class="nav__item">Головна</a>
                 <a href="#footer" class="nav__item">Контакти</a>
                 <a href="/pages/sponsors.html" class="nav__item">Спонсори</a>
             </nav>
