--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <span class="header__logo">ED</span>
             <nav class="nav">
-                <a href="./index.html" class="nav__item">Головна</a>
+                <a href="./pages/school/lessons.html" class="nav__item">Головна</a>
                 <a href="#footer" class="nav__item">Контакти</a>
                 <a href="./pages/sponsors.html" class="nav__item">Спонсори</a>
             </nav>
