--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./sass/main.scss" />
+    <link rel="rel" href="./images/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <h1>HWLLO WORLD</h1>
+    <h1>addwdawdddaw</h1>
+    <h1>addwdawdddaw</h1>
+    <h1>addwdawdddaw</h1>
+    <h1>addwdawdddaw</h1>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
