--- a/src/pages/school/lessons.html
+++ b/src/pages/school/lessons.html
@@ -24,9 +24,13 @@
                 <img class="tab__list__item__svg" src="../../svg/wifi_tethering.svg" alt="">
             </li>
         </ul>
-        <div class="tab__profile">
-            <img src="../../images/Image-profile тАУ ¦¦¦-¦¬TЦTП.png" alt="">
-        </div>
+        <button class="tab__profile"><img src="../../images/Image-profile тАУ ¦¦¦-¦¬TЦTП.png" alt=""></button>
+    </div>
+    <div class="user__settings">
+        <form class="user__settings__modal">
+            <button class="user__settings__modal__logout"><img src="../../svg/logout.svg" alt=""> Вийти</button>
+            <button class="user__settings__modal__profile"><img src="../../svg/account_circle.svg" alt=""> Профіль</button>
+        </form>
     </div>
     <div class="settings">
         <input placeholder="Пошук" type="text">
