--- a/index.html
+++ b/index.html
@@ -1,66 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF__8">
-    <meta name="viewport" content="width=device__width, initial__scale=1.0">
-    <link rel="stylesheet" href="/index.f7626f62.css">
-    <title>Document</title>
-</head>
-
-<body>
-    <div class="pages">
-        <include src="./pages/sponsors.html"></include>
-    </div>
-    <header>
-        <div class="container">
-            <span class="header__logo">ED</span>
-            <nav class="nav">
-                <a href="/index.html" class="nav__item">Головна</a>
-                <a href="#footer" class="nav__item">Контакти</a>
-                <a href="/pages/sponsors.html" class="nav__item">Спонсори</a>
-            </nav>
-            <div class="acount__chose">
-                <button class="main__acount__btn">
-                    Зареєструватися
-                </button>
-                <button class="main__acount__btn">
-                    Ввійти
-                </button>
-            </div>
-        </div>
-    </header>
-    <section class="hero">
-        <div class="container">
-            <div class="first__part">
-                <h1 class="first__title">
-                    Найкраща онлайн-школа хімії EDTetch
-                </h1>
-            </div>
-            <h1 class="second__title">
-                Перший урок безкоштовно!!!
-            </h1>
-            <button class="try__btn">Спробувати</button>
-        </div>
-    </section>
-    <footer id="footer" class="footer">
-        <div class="container">
-            <span class="footer__logo">
-                EDTech
-            </span>
-            <ul class="footer__list">
-                <li class="adress__item"><a href="" class="adress__link">+911</a></li>
-                <li class="adress__item"><a href="" class="adress__link">EDTech.chemistry@gmail.com</a></li>
-                <li class="adress__item"><a href="https://maps.app.goo.gl/ZKdGWR2Hb4qPPnKC9" class="adress__link">США, Маямі</a></li>
-                <li class="adress__item"><a href="/pages/sponsors.html" class="adress__link">Спонсори</a></li>
-            </ul>
-            <div class="work__send">
-                <h3 class="work__title">Для працевлаштуваня</h3>
-                <button class="work__send__btn">Подати запит</button>
-                <p class="work__description">Ми відповідаємо вам,як найшивше</p>
-            </div>
-        </div>
-    </footer>
-<script src="/mge.59712999.js"></script></body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf__8"><meta name="viewport" content="width=device__width, initial__scale=1.0"><link rel="stylesheet" href="/index.da159af7.css"><title>Document</title></head><body> <header> <div class="container"> <span class="header__logo">ED</span> <nav class="nav"> <a href="./" class="nav__item">Головна</a> <a href="#footer" class="nav__item">Контакти</a> <a href="/pages/sponsors.html" class="nav__item">Спонсори</a> </nav> <div class="acount__chose"> <button class="main__acount__btn"> Зареєструватися </button> <button class="main__acount__btn"> Ввійти </button> </div> </div> </header> <section class="hero"> <div class="container"> <div class="first__part"> <h1 class="first__title"> Найкраща онлайн-школа хімії EDTetch </h1> </div> <h1 class="second__title"> Перший урок безкоштовно!!! </h1> <button class="try__btn">Спробувати</button> </div> </section> <footer id="footer" class="footer"> <div class="container"> <span class="footer__logo"> EDTech </span> <ul class="footer__list"> <li class="adress__item"><a href class="adress__link">+911</a></li> <li class="adress__item"><a href class="adress__link">EDTech.chemistry@gmail.com</a></li> <li class="adress__item"><a href="https://maps.app.goo.gl/ZKdGWR2Hb4qPPnKC9" class="adress__link">США, Маямі</a></li> <li class="adress__item"><a href="/pages/sponsors.html" class="adress__link">Спонсори</a></li> </ul> <div class="work__send"> <h3 class="work__title">Для працевлаштуваня</h3> <button class="work__send__btn">Подати запит</button> <p class="work__description">Ми відповідаємо вам,як найшивше</p> </div> </div> </footer> </body></html>
