--- a/src/pages/tab.html
+++ b/src/pages/tab.html
@@ -1,28 +1,59 @@
-<div class="tab">
-    <a href="../../index.html"><span class="tab__logo__text">ED</span></a>
-    <img class="tab__mainicon" src="../../svg/dashboard.svg" alt="">
-    <ul class="tab__list">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../sass/main.scss" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="tab">
+      <a href="../index.html"><span class="tab__logo__text">ED</span></a>
+      <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" />
+      <ul class="tab__list">
         <li class="tab__list__item">
-            <img class="tab__list__item__svg" src="../../svg/school.svg" alt="">
+          <img class="tab__list__item__svg" src="../svg/school.svg" alt="" />
         </li>
         <li class="tab__list__item">
-            <img class="tab__list__item__svg" src="../../svg/emoji_objects.svg" alt="">
+          <img
+            class="tab__list__item__svg"
+            src="../svg/emoji_objects.svg"
+            alt=""
+          />
         </li>
         <li class="tab__list__item">
-            <img class="tab__list__item__svg" src="../../svg/chat.svg" alt="">
+          <img class="tab__list__item__svg" src="../svg/chat.svg" alt="" />
         </li>
         <li class="tab__list__item">
-            <img class="tab__list__item__svg" src="../../svg/wifi_tethering.svg" alt="">
+          <img
+            class="tab__list__item__svg"
+            src="../svg/wifi_tethering.svg"
+            alt=""
+          />
         </li>
-    </ul>
-    <button class="tab__profile"><img src="../../images/Image-profile тАУ ¦¦¦-¦¬TЦTП.png" alt=""></button>
-</div>
-<div class="user__settings">
-    <form class="user__settings__modal">
-        <button class="user__settings__modal__logout"><img src="../../svg/logout.svg" alt=""> Вийти</button>
-        <button class="user__settings__modal__profile"><img src="../../svg/account_circle.svg" alt=""> Профіль</button>
-    </form>
-</div>
-<div class="settings">
-    <input placeholder="Пошук" type="text">
-</div>
+      </ul>
+      <button class="tab__profile">
+        <img src="../svg/account_circle.svg" alt="" />
+      </button>
+    </div>
+    <div class="user__settings">
+      <form class="user__settings__modal">
+        <button class="user__settings__modal__logout">
+          <img src="../svg/logout.svg" alt="" /> Вийти
+        </button>
+        <button class="user__settings__modal__profile">
+          <img src="../svg/account_circle.svg" alt="" /> Профіль
+        </button>
+      </form>
+    </div>
+    <div class="settings">
+      <input placeholder="Пошук" type="text" />
+    </div>
+  </body>
+</html>
