--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <span class="header__logo">ED</span>
             <nav class="nav">
-                <a href="./" class="nav__item">Головна</a>
+                <a href="/pages/tab.html" class="nav__item">Головна</a>
                 <a href="#footer" class="nav__item">Контакти</a>
                 <a href="/pages/sponsors.html" class="nav__item">Спонсори</a>
             </nav>
@@ -22,7 +22,7 @@
                     Зареєструватися
                 </button>
                 <button class="main__acount__btn">
-                    Ввійти
+                    Ввійти awd
                 </button>
             </div>
         </div>
