--- a/pages/tab.html
+++ b/pages/tab.html
@@ -1,48 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/index.f7626f62.css">
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="tab">
-      <a href="/index.html"><span class="tab__logo__text">ED</span></a>
-      <img class="tab__mainicon" src="/dashboard.84449c88.svg" alt="">
-      <ul class="tab__list">
-        <li class="tab__list__item">
-          <img class="tab__list__item__svg" src="/school.21124949.svg" alt="">
-        </li>
-        <li class="tab__list__item">
-          <img class="tab__list__item__svg" src="/emoji_objects.076f501b.svg" alt="">
-        </li>
-        <li class="tab__list__item">
-          <img class="tab__list__item__svg" src="/chat.8d9b58d9.svg" alt="">
-        </li>
-        <li class="tab__list__item">
-          <img class="tab__list__item__svg" src="/wifi_tethering.2b268521.svg" alt="">
-        </li>
-      </ul>
-      <button class="tab__profile">
-        <img src="/account_circle.2b9e9413.svg" alt="">
-      </button>
-    </div>
-    <div class="user__settings">
-      <form class="user__settings__modal">
-        <button class="user__settings__modal__logout">
-          <img src="/logout.f94d2c58.svg" alt=""> Вийти
-        </button>
-        <button class="user__settings__modal__profile">
-          <img src="/account_circle.2b9e9413.svg" alt=""> Профіль
-        </button>
-      </form>
-    </div>
-    <div class="settings">
-      <input placeholder="Пошук" type="text">
-    </div>
-  <script src="/tab.c6f26226.js"></script></body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"><link rel="stylesheet" href="/index.a593860e.css"><title>Document</title></head><body> <div class="tab"> <a href="/index.html"><span class="tab__logo__text">ED</span></a> <img class="tab__mainicon" src="/dashboard.c1601abe.svg" alt> <ul class="tab__list"> <li class="tab__list__item"> <img class="tab__list__item__svg" src="/school.185c1a10.svg" alt> </li> <li class="tab__list__item"> <img class="tab__list__item__svg" src="/emoji_objects.b46bab92.svg" alt> </li> <li class="tab__list__item"> <img class="tab__list__item__svg" src="/chat.6da958e5.svg" alt> </li> <li class="tab__list__item"> <img class="tab__list__item__svg" src="/wifi_tethering.ea1b9457.svg" alt> </li> </ul> <button class="tab__profile"> <img src="/account_circle.5bc8a344.svg" alt> </button> </div> <div class="user__settings"> <form class="user__settings__modal"> <button class="user__settings__modal__logout"> <img src="/logout.1577db56.svg" alt> Вийти </button> <button class="user__settings__modal__profile"> <img src="/account_circle.5bc8a344.svg" alt> Профіль </button> </form> </div> <div class="settings"> <input placeholder="Пошук" type="text"> </div> </body></html>
