--- a/src/pages/tab.html
+++ b/src/pages/tab.html
@@ -38,8 +38,8 @@
           />
         </li>
       </ul>
-      <button class="tab__profile">
-        <img src="../svg/account_circle.svg" alt="" />
+      <button type="button"  class="tab__profile">
+        <img src="../svg/account_circle.svg" alt="" />w
       </button>
     </div>
     <div class="user__settings">
