--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                     Зареєструватися
                 </button>
                 <button class="main__acount__btn">
-                    Ввійти awd
+                    Ввійти 
                 </button>
             </div>
         </div>
