--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF__8">
-    <meta name="viewport" content="width=device__width, initial__scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./sass/main.scss">
     <title>Document</title>
 </head>
@@ -22,7 +22,7 @@
                     Зареєструватися
                 </button>
                 <button class="main__acount__btn">
-                    Ввійти 
+                    Ввійти awd
                 </button>
             </div>
         </div>
