--- a/src/pages/tab.html
+++ b/src/pages/tab.html
@@ -44,10 +44,10 @@
     </div>
     <div class="user__settings">
       <form class="user__settings__modal">
-        <button class="user__settings__modal__logout">
+        <button type="button" class="user__settings__modal__logout">
           <img src="../svg/logout.svg" alt="" /> Вийти
         </button>
-        <button class="user__settings__modal__profile">
+        <button type="button" class="user__settings__modal__profile">
           <img src="../svg/account_circle.svg" alt="" /> Профіль
         </button>
       </form>
