--- a/src/pages/sponsors.html
+++ b/src/pages/sponsors.html
@@ -30,13 +30,15 @@
                 <img class="slides__image" src="../images/GoIT 1 (1).png" alt="GO IT">
                 <h3 class="slides__text">GO IT</h3>
             </div>
-            <a id="previous" class="arrow">&#10094</a>
-            <a id="next" class="arrow">&#10095</a>
+           
             <div id="text-bar">
                 <p id="place"></p>
             </div>
         </div>
         <div id="dotsContainer"></div>
+        <a id="previous" class="arrow">&#10094</a>
+        <a id="next" class="arrow">&#10095</a>
     </div>
+    <script type="module" src="../index.js"></script>
 </body>
 </html>
