--- a/pages/tab.html
+++ b/pages/tab.html
@@ -27,16 +27,16 @@
           <img class="tab__list__item__svg" src="/wifi_tethering.2b268521.svg" alt="">
         </li>
       </ul>
-      <button class="tab__profile">
-        <img src="/account_circle.2b9e9413.svg" alt="">
+      <button type="button" class="tab__profile">
+        <img src="/account_circle.2b9e9413.svg" alt="">w
       </button>
     </div>
     <div class="user__settings">
       <form class="user__settings__modal">
-        <button class="user__settings__modal__logout">
+        <button type="button" class="user__settings__modal__logout">
           <img src="/logout.f94d2c58.svg" alt=""> Вийти
         </button>
-        <button class="user__settings__modal__profile">
+        <button type="button" class="user__settings__modal__profile">
           <img src="/account_circle.2b9e9413.svg" alt=""> Профіль
         </button>
       </form>
