--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
-    <meta charset="UTF__8">
-    <meta name="viewport" content="width=device__width, initial__scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./sass/main.scss">
     <title>Document</title>
 </head>
@@ -29,49 +21,64 @@
                 <a href="#footer" class="nav__item">Контакти</a>
                 <a href="./pages/sponsors.html" class="nav__item">Спонсори</a>
             </nav>
-            <div class="acount__chose">
-                <button class="main__acount__btn">
-                    Зареєструватися
-                </button>
-                <button class="main__acount__btn">
-                    Увійти
-                </button>
+            <div class="account__choose">
+                <button type="button" class="regButton main__account__btn">Зареєструватися</button>
+                <button type="button" class="logButton main__account__btn">Увійти</button>
+                <div class="profile__circle change__invisible" id="profileIcon"></div>
             </div>
         </div>
-    </header class='header'>
+    </header>
     <section class="hero">
         <div class="container">
             <div class="first__part">
-                <h1 class="first__title">
-                    Найкраща онлайн-школа хімії EDTetch
-                </h1>
+                <h1 class="first__title">Найкраща онлайн-школа хімії EDTech</h1>
             </div>
-            <h1 class="second__title">
-                Перший урок безкоштовно!!!
-            </h1>
-            <button class="try__btn">Спробувати</button>
+            <h1 class="second__title">Перший урок безкоштовно!!!</h1>
+            <button class="tryButton try__btn">Спробувати</button>
         </div>
     </section>
     <footer id="footer" class="footer">
         <div class="container">
             <div class="footer__box">
-            <span class="footer__logo">
-                EDTech
-            </span>
-            <ul class="footer__list">
-                <li class="adress__item"><a href="" class="adress__link">+911</a></li>
-                <li class="adress__item"><a href="" class="adress__link">EDTech.chemistry@gmail.com</a></li>
-                <li class="adress__item"><a href="https://maps.app.goo.gl/ZKdGWR2Hb4qPPnKC9" class="adress__link">США, Маямі</a></li>
-                <li class="adress__item"><a href="./pages/sponsors.html" class="adress__link">Спонсори</a></li>
-            </ul>
-        </div>
+                <span class="footer__logo">EDTech</span>
+                <ul class="footer__list">
+                    <li class="address__item"><a href="" class="address__link">+911</a></li>
+                    <li class="address__item"><a href="" class="address__link">EDTech.chemistry@gmail.com</a></li>
+                    <li class="address__item"><a href="https://maps.app.goo.gl/ZKdGWR2Hb4qPPnKC9" class="address__link">США, Маямі</a></li>
+                    <li class="address__item"><a href="./pages/sponsors.html" class="address__link">Спонсори</a></li>
+                </ul>
+            </div>
             <div class="work__send">
-                <h3 class="work__title">Для працевлаштуваня</h3>
+                <h3 class="work__title">Для працевлаштування</h3>
                 <button class="work__send__btn">Подати запит</button>
-                <p class="work__description">Ми відповідаємо вам,як найшивше</p>
+                <p class="work__description">Ми відповідаємо вам якнайшвидше</p>
             </div>
         </div>
     </footer>
+    <div class="register__modal change__invisible">
+        <form class="register__form">
+            <h1 class="register__title">Реєстрація</h1>
+            <div class="register__input__box">
+                <input placeholder="Ім'я" name="profilename" class="register__social">
+                <input placeholder="Прізвище" name="profilesurname" class="register__social">
+                <input placeholder="Логін" name="profilelogin" class="register__social">
+                <input placeholder="Пароль" name="profilepassword" class="register__social">
+                <input placeholder="Повторіть пароль" class="register__social">
+            </div>
+            <button type="submit" class="register__more">Зареєструватися</button>
+        </form>
+    </div>
+    <div class="login__modal change__invisible">
+        <form class="login__form">
+            <h1 class="login__title">Вхід</h1>
+            <div class="login__input__box">
+                <input placeholder="Логін" name="profilelogin" class="login__social">
+                <input placeholder="Пароль" name="profilepassword" class="login__social">
+            </div>
+            <button type="submit" class="login__more">Зайти</button>
+        </form>
+    </div>
+    <script src="./index.js" type="module"></script>
 </body>
 
 </html>
