--- a/src/pages/courses.html
+++ b/src/pages/courses.html
@@ -10,7 +10,7 @@
 <body>
     <div class="tab">
         <a href="../../index.html"><span class="tab__logo__text">ED</span></a>
-        <img class="tab__mainicon" src="../../svg/dashboard.svg" alt="">
+        <a href="../pages/dashboard.html"> <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" /></a>
         <ul class="tab__list">
             <li class="tab__list__item">
                 <img class="tab__list__item__svg" src="../../svg/school.svg" alt="">
