--- a/src/pages/tab.html
+++ b/src/pages/tab.html
@@ -13,53 +13,34 @@
   <title>Document</title>
 </head>
 
-<body>
+<body class="tab__body">
   <div class="tab">
     <a href="../index.html"><span class="tab__logo__text">ED</span></a>
-    <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" />
+    <a href="../pages/dashboard.html"> <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" /></a>
     <ul class="tab__list">
       <li class="tab__list__item">
-        <img class="tab__list__item__svg" src="../svg/school.svg" alt="" />
+        <a href="/school">
+          <img class="tab__list__item__svg" src="../svg/school.svg" alt="School" />
+        </a>
       </li>
       <li class="tab__list__item">
-        <img class="tab__list__item__svg" src="../svg/emoji_objects.svg" alt="" />
+        <a href="/emoji_objects">
+          <img class="tab__list__item__svg" src="../svg/emoji_objects.svg" alt="Emoji Objects" />
+        </a>
       </li>
       <li class="tab__list__item">
-        <img class="tab__list__item__svg" src="../svg/chat.svg" alt="" />
+        <a href="/chat">
+          <img class="tab__list__item__svg" src="../svg/chat.svg" alt="Chat" />
+        </a>
       </li>
       <li class="tab__list__item">
-        <img class="tab__list__item__svg" src="../svg/wifi_tethering.svg" alt="" />
+        <a href="/wifi_tethering">
+          <img class="tab__list__item__svg" src="../svg/wifi_tethering.svg" alt="WiFi Tethering" />
+        </a>
       </li>
     </ul>
     <button type="button" class="tab__profile">
       <img src="../svg/account_circle.svg" alt="" />w
-    </button>
-  </div>
-  <div class="user__settings">
-    <form class="user__settings__modal">
-      <button type="button" class="user__settings__modal__logout">
-        <img src="../svg/logout.svg" alt="" /> Вийти
-      </button>
-      <button type="button" class="user__settings__modal__profile">
-        <img src="../svg/account_circle.svg" alt="" /> Профіль
-      </button>
-    </form>
-  </div>
-  <div class="settings">
-    <input placeholder="Пошук" type="text" />
-  </div>
-  <div class="settings__menu">
-    <button class="settings__menu-btn" type="button">
-      <svg class="settings__menu-svg">
-        <use></use>
-      </svg>
-      Вийти
-    </button>
-    <button class="settings__menu-btn" type="button">
-      <svg class="settings__menu-svg">
-        <use></use>
-      </svg>
-      Профіль
     </button>
   </div>
 </body>
