--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,21 @@
         <div class="container">
             <span class="header__logo">ED</span>
             <nav class="nav">
-                <a href="./pages/tab.html" class="nav__item">Головна</a>
+                <a href="./index.html" class="nav__item">Головна</a>
                 <a href="#footer" class="nav__item">Контакти</a>
                 <a href="./pages/sponsors.html" class="nav__item">Спонсори</a>
             </nav>
             <div class="account__choose">
                 <button type="button" class="regButton main__account__btn">Зареєструватися</button>
                 <button type="button" class="logButton main__account__btn">Увійти</button>
-                <div class="profile__circle change__invisible" id="profileIcon"></div>
+                <div class="profile-header">
+                    <a href="./pages/dashboard.html" id="profile-link" class="profile__circle change__invisible"></a>
+                    <button id="logout-button" class="logout__button change__invisible">Вийти</button>
+                </div>                
             </div>
         </div>
     </header>
+    
     <section class="hero">
         <div class="container">
             <div class="first__part">
