--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 <button type="button" class="regButton main__account__btn">Зареєструватися</button>
                 <button type="button" class="logButton main__account__btn">Увійти</button>
                 <div class="profile-header">
-                    <a href="./pages/dashboard.html" id="profile-link" class="profile__circle change__invisible"></a>
+                    <a title="awd" href="./pages/dashboard.html" id="profile-link" class="profile__circle change__invisible"></a>
                     <button id="logout-button" class="logout__button change__invisible">Вийти</button>
                 </div>                
             </div>
