--- a/src/pages/tab.html
+++ b/src/pages/tab.html
@@ -19,23 +19,18 @@
     <a href="../pages/dashboard.html"> <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" /></a>
     <ul class="tab__list">
       <li class="tab__list__item">
-        <a href="/school">
+        <a href="./courses.html">
           <img class="tab__list__item__svg" src="../svg/school.svg" alt="School" />
         </a>
       </li>
       <li class="tab__list__item">
-        <a href="/emoji_objects">
+        <a href="./lessons.html">
           <img class="tab__list__item__svg" src="../svg/emoji_objects.svg" alt="Emoji Objects" />
         </a>
       </li>
       <li class="tab__list__item">
-        <a href="/chat">
+        <a href="./rewiews.html">
           <img class="tab__list__item__svg" src="../svg/chat.svg" alt="Chat" />
-        </a>
-      </li>
-      <li class="tab__list__item">
-        <a href="/wifi_tethering">
-          <img class="tab__list__item__svg" src="../svg/wifi_tethering.svg" alt="WiFi Tethering" />
         </a>
       </li>
     </ul>
