--- a/src/pages/courses.html
+++ b/src/pages/courses.html
@@ -110,7 +110,7 @@
     </style>
 </head>
 
-<body>
+<body class="tab__body">
     <div class="tab">
         <a href="../index.html"><span class="tab__logo__text">ED</span></a>
         <a href="../pages/dashboard.html"> <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" /></a>
