--- a/src/pages/lessons.html
+++ b/src/pages/lessons.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../sass/main.scss" />
     <title>Document</title>
     <style>
@@ -16,7 +16,7 @@
         width: 36px;
         height: 36px;
         border-radius: 50%;
-        background-color: #001C27;
+        background-color: #001c27;
         color: #fff;
         display: flex;
         align-items: center;
@@ -27,78 +27,105 @@
         cursor: pointer;
       }
     </style>
-</head>
+  </head>
 
-<body class="tab__body">
+  <body class="tab__body">
     <div class="tab">
-        <a href="../index.html"><span class="tab__logo__text">ED</span></a>
-        <a href="../pages/dashboard.html"> <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" /></a>
-        <ul class="tab__list">
-          <li class="tab__list__item">
-            <a href="./courses.html">
-              <img class="tab__list__item__svg" src="../svg/school.svg" alt="School" />
-            </a>
-          </li>
-          <li class="tab__list__item">
-            <a href="./lessons.html">
-              <img class="tab__list__item__svg" src="../svg/emoji_objects.svg" alt="Emoji Objects" />
-            </a>
-          </li>
-          <li class="tab__list__item">
-            <a href="./rewiews.html">
-              <img class="tab__list__item__svg" src="../svg/chat.svg" alt="Chat" />
-            </a>
-          </li>
-        </ul>
-        <button type="button" class="tab__profile">
-          <!-- Контент будет заполняться через JavaScript -->
-        </button>
-      </div>
+      <a href="../index.html"><span class="tab__logo__text">ED</span></a>
+      <a href="../pages/dashboard.html">
+        <img class="tab__mainicon" src="../svg/dashboard.svg" alt=""
+      /></a>
+      <ul class="tab__list">
+        <li class="tab__list__item">
+          <a href="./courses.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/school.svg"
+              alt="School"
+            />
+          </a>
+        </li>
+        <li class="tab__list__item">
+          <a href="./lessons.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/emoji_objects.svg"
+              alt="Emoji Objects"
+            />
+          </a>
+        </li>
+        <li class="tab__list__item">
+          <a href="./rewiews.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/chat.svg"
+              alt="Chat"
+            />
+          </a>
+        </li>
+      </ul>
+      <button type="button" class="tab__profile">
+        <!-- Контент будет заполняться через JavaScript -->
+      </button>
+    </div>
     <h1 class="lessons__title">Уроки</h1>
     <h3 class="lessons__chapter-title">Розділ</h3>
     <ul class="lessons__chapter">
-        <li class="lessons__lesson">
-            <a href="/lesson1" class="lessons__lesson-link">Урок</a>
-        </li>
-        <li class="lessons__lesson">
-            <a href="/lesson2" class="lessons__lesson-link">Урок</a>
-        </li>
-        <li class="lessons__lesson">
-            <a href="/lesson3" class="lessons__lesson-link">Урок</a>
-        </li>
-        <li class="lessons__lesson">
-            <a href="/lesson4" class="lessons__lesson-link">Урок</a>
-        </li>
+      <li class="lessons__lesson">
+        <a href="/lesson1" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson2" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson3" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson4" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson5" class="lessons__lesson-link">Урок</a>
+      </li>
     </ul>
     <h3 class="lessons__chapter-title">Розділ</h3>
     <ul class="lessons__chapter">
-        <li class="lessons__lesson">
-            <a href="/lesson5" class="lessons__lesson-link">Урок</a>
-        </li>
-        <li class="lessons__lesson">
-            <a href="/lesson6" class="lessons__lesson-link">Урок</a>
-        </li>
-        <li class="lessons__lesson">
-            <a href="/lesson7" class="lessons__lesson-link">Урок</a>
-        </li>
-        <li class="lessons__lesson">
-            <a href="/lesson8" class="lessons__lesson-link">Урок</a>
-        </li>
+      
+      <li class="lessons__lesson">
+        <a href="/lesson6" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson7" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson8" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson9" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson10" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson11" class="lessons__lesson-link">Урок</a>
+      </li>
     </ul>
     <h3 class="lessons__chapter-title">Розділ</h3>
     <ul class="lessons__chapter">
-        <li class="lessons__lesson">
-            <a href="/lesson9" class="lessons__lesson-link">Урок</a>
-        </li>
-        <li class="lessons__lesson">
-            <a href="/lesson10" class="lessons__lesson-link">Урок</а>
-        </ли>
-        <li class="lessons__lesson">
-            <a href="/lesson11" class="lessons__lesson-link">Урок</а>
-        </ли>
-        <li class="lessons__lesson">
-            <а href="/lesson12" class="lessons__lesson-link">Урок</а>
-        </ли>
+      <li class="lessons__lesson">
+        <a href="/lesson11" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson12" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson13" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson14" class="lessons__lesson-link">Урок</a>
+      </li>
+      <li class="lessons__lesson">
+        <a href="/lesson15" class="lessons__lesson-link">Урок</a>
+      </li>
     </ul>
 
     <script>
@@ -118,6 +145,5 @@
         updateProfileButton();
       });
     </script>
-</body>
-
+  </body>
 </html>
