--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <header>
         <div class="container">
             <span class="header__logo">ED</span>
+           
             <nav class="nav">
                 <a href="./index.html" class="nav__item">Головна</a>
                 <a href="#footer" class="nav__item">Контакти</a>
@@ -56,11 +57,13 @@
                 <h3 class="work__title">Для працевлаштування</h3>
                 <button class="work__send__btn">Подати запит</button>
                 <p class="work__description">Ми відповідаємо вам якнайшвидше</p>
+                
             </div>
         </div>
     </footer>
     <div class="register__modal change__invisible">
         <form class="register__form">
+            <img class="cross__svg" width="40px" height="40px" src="./svg/cross.svg" alt="awd">
             <h1 class="register__title">Реєстрація</h1>
             <div class="register__input__box">
                 <input placeholder="Ім'я" name="profilename" class="register__social">
@@ -74,6 +77,7 @@
     </div>
     <div class="login__modal change__invisible">
         <form class="login__form">
+            <img class="cross__svg" width="40px" height="40px" src="./svg/cross.svg" alt="awd">
             <h1 class="login__title">Вхід</h1>
             <div class="login__input__box">
                 <input placeholder="Логін" name="profilelogin" class="login__social">
